log
Thu 09 May 2024 03:06:25 PM UTC: 
 tests:  1|8
total_score: 0/70
920eee7
Thu 09 May 2024 03:09:25 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|7
total_score: 5/70
b81860b
Thu 09 May 2024 03:17:27 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
06a49d7
Thu 09 May 2024 03:18:14 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e8ece15
Thu 09 May 2024 03:20:36 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|6
total_score: 15/70
eaee843
Thu 09 May 2024 03:25:22 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
69c2caf
Thu 09 May 2024 03:30:54 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  8|5
total_score: 15/70
d75243b
Thu 09 May 2024 03:34:49 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
2045170
Thu 09 May 2024 03:37:02 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
ad81590
Thu 09 May 2024 03:40:05 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|0
25725ad
Thu 09 May 2024 03:41:39 PM UTC: 
 treemap.c | 63 +--------------------------------------------------------------
 1 file changed, 1 insertion(+), 62 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  103 |     return 0;
      |            ^
treemap.c:102:6: note: declared here
  102 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50010ee
Thu 09 May 2024 03:41:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
f4b332a
Thu 09 May 2024 03:43:40 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
d135646
Sun 12 May 2024 12:43:49 AM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|0
2aed25e
Sun 12 May 2024 12:49:45 AM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:131:23: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  131 |             TreeNode* child;
      |                       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
aaafdff
